@@ -36,7 +36,7 @@ our @EXPORT = qw( 	pandora_help_screen
 # version: Defines actual version of Pandora Server for this module only
 my $pandora_version = "1.3-dev";
 my $pandora_build="PS070731";
-our $VERSION = $pandora_version;
+our $VERSION = $pandora_version." ".$pandora_build;
 
 # Setup hash
 my %pa_config;
